--- a/src/packaging/third-party-licenses/licenses.html
+++ b/src/packaging/third-party-licenses/licenses.html
@@ -1,19 +1,3 @@
-<!--
-  ~ Copyright 2019 dc-square GmbH
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~       http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <header></header>
 <body>
 
@@ -30,7 +14,7 @@
     </tr>
     <tr>
         <td><p>aopalliance:aopalliance</p></td>
-        <td><p>Public Domain</p></td>
+        <td><p>CC0</p></td>
         <td><p><a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
         </p></td>
         <td><p></p></td>
@@ -38,14 +22,14 @@
     <tr>
         <td><p>ch.qos.logback:logback-classic</p></td>
         <td><p>EPL, Version 1.0</p></td>
-        <td><p><a href="https://www.eclipse.org/legal/epl-v10.html">https://www.eclipse.org/legal/epl-v10.html</a>
+        <td><p><a href="https://opensource.org/licenses/EPL-1.0">https://opensource.org/licenses/EPL-1.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
     <tr>
         <td><p>ch.qos.logback:logback-core</p></td>
         <td><p>EPL, Version 1.0</p></td>
-        <td><p><a href="https://www.eclipse.org/legal/epl-v10.html">https://www.eclipse.org/legal/epl-v10.html</a>
+        <td><p><a href="https://opensource.org/licenses/EPL-1.0">https://opensource.org/licenses/EPL-1.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
@@ -94,7 +78,7 @@
     <tr>
         <td><p>com.github.oshi:oshi-core</p></td>
         <td><p>EPL, Version 1.0</p></td>
-        <td><p><a href="https://www.eclipse.org/legal/epl-v10.html">https://www.eclipse.org/legal/epl-v10.html</a>
+        <td><p><a href="https://opensource.org/licenses/EPL-1.0">https://opensource.org/licenses/EPL-1.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
@@ -151,20 +135,6 @@
         <td><p>com.sun.xml.bind:jaxb-impl</p></td>
         <td><p>EDL, Version 1.0</p></td>
         <td><p><a href="https://www.eclipse.org/org/documents/edl-v10.php">https://www.eclipse.org/org/documents/edl-v10.php</a>
-        </p></td>
-        <td><p></p></td>
-    </tr>
-    <tr>
-        <td><p>commons-codec:commons-codec</p></td>
-        <td><p>Apache License, Version 2.0</p></td>
-        <td><p><a href="https://opensource.org/licenses/Apache-2.0">https://opensource.org/licenses/Apache-2.0</a>
-        </p></td>
-        <td><p></p></td>
-    </tr>
-    <tr>
-        <td><p>commons-collections:commons-collections</p></td>
-        <td><p>Apache License, Version 2.0</p></td>
-        <td><p><a href="https://opensource.org/licenses/Apache-2.0">https://opensource.org/licenses/Apache-2.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
@@ -290,14 +260,14 @@
     <tr>
         <td><p>net.java.dev.jna:jna</p></td>
         <td><p>Apache License, Version 2.0</p></td>
-        <td><p><a href="http://opensource.org/licenses/Apache-2.0">http://opensource.org/licenses/Apache-2.0</a>
+        <td><p><a href="https://opensource.org/licenses/Apache-2.0">https://opensource.org/licenses/Apache-2.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
     <tr>
         <td><p>net.java.dev.jna:jna-platform</p></td>
         <td><p>Apache License, Version 2.0</p></td>
-        <td><p><a href="http://opensource.org/licenses/Apache-2.0">http://opensource.org/licenses/Apache-2.0</a>
+        <td><p><a href="https://opensource.org/licenses/Apache-2.0">https://opensource.org/licenses/Apache-2.0</a>
         </p></td>
         <td><p></p></td>
     </tr>
